BARC UAT/src/objects/HouseHold_Member__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CWE_Detail_Occupation__c</fullName>
        <label>CWE Detail Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWE_Status__c</fullName>
        <label>CWE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Illiterate</fullName>
                </value>
                <value>
                    <fullName>Literate but no formal schooling</fullName>
                </value>
                <value>
                    <fullName>School – Up to 4th standard</fullName>
                </value>
                <value>
                    <fullName>5th – 9th standard</fullName>
                </value>
                <value>
                    <fullName>SSC/HSC(10th – 12th)</fullName>
                </value>
                <value>
                    <fullName>Some College(incl.dip) but not Graduate</fullName>
                </value>
                <value>
                    <fullName>Graduate–General (B.A.,B.Sc.B.Com.)</fullName>
                </value>
                <value>
                    <fullName>Graduate–Professional (B.E., M.B.B.S., B.Tech)</fullName>
                </value>
                <value>
                    <fullName>Post-Graduate-General (M.A., M.Sc., M.Com, M.Phil, PhD)</fullName>
                </value>
                <value>
                    <fullName>Post-Graduate-Professional (M.E., M.Tech., MBA etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <label>HouseHold</label>
        <referenceTo>HouseHold__c</referenceTo>
        <relationshipLabel>HouseHold Members</relationshipLabel>
        <relationshipName>HouseHold_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <label>Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Serial_Number__c</fullName>
        <label>Mother Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Small Scale Traders</fullName>
                </value>
                <value>
                    <fullName>Worker - with no professional training / laborer</fullName>
                </value>
                <value>
                    <fullName>Worker-with professional training/ skill set</fullName>
                </value>
                <value>
                    <fullName>Shop Owners</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with no employees</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with 1-9 employees</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with more than 10 employees</fullName>
                </value>
                <value>
                    <fullName>Self-employed professional</fullName>
                </value>
                <value>
                    <fullName>Clerk/Salesman</fullName>
                </value>
                <value>
                    <fullName>Supervisory level</fullName>
                </value>
                <value>
                    <fullName>Officer/Executive-Junior</fullName>
                </value>
                <value>
                    <fullName>Officer/Executive-Middle/Senior</fullName>
                </value>
                <value>
                    <fullName>Farmer and landowner of the same farming land</fullName>
                </value>
                <value>
                    <fullName>Farmer- on contract basis/ working on someone else</fullName>
                </value>
                <value>
                    <fullName>Agricultural worker</fullName>
                </value>
                <value>
                    <fullName>Owner of livestock</fullName>
                </value>
                <value>
                    <fullName>Owner of fisheries</fullName>
                </value>
                <value>
                    <fullName>Owner of poultry</fullName>
                </value>
                <value>
                    <fullName>Artisan / Skilled/ trained labor</fullName>
                </value>
                <value>
                    <fullName>Postman</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Service (Staying in one village and working in   another village)</fullName>
                </value>
                <value>
                    <fullName>Service (Staying in one village and working in  City/town)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RuralUrban__c</fullName>
        <label>RuralUrban</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4M_10__c</fullName>
        <formula>CASE(Occupation__c, 
						&quot;Not Working&quot;, &quot;1&quot;, 
						&quot;Small Scale Traders&quot;, &quot;2&quot;, 
						&quot;Worker-with no professional training / laborer&quot;, &quot;3&quot;, 
						&quot;Worker-with professional training/ skill set&quot;, &quot;4&quot;, 
						&quot;Shop Owners&quot;, &quot;5&quot;, 
						&quot;Businessman/Industrialist with no employees&quot;, &quot;6&quot;, 
						&quot;Businessman/Industrialist with 1-9 employees&quot;, &quot;7&quot;, 
						&quot;Businessman/Industrialist with more than 10 employees&quot;, &quot;8&quot;, 
						&quot;Self-employed professional&quot;, &quot;9&quot;, 
						&quot;Clerk/Salesman&quot;, &quot;10&quot;, 
						&quot;Supervisory level&quot;, &quot;11&quot;, 
						&quot;Officer/Executive-Junior&quot;, &quot;12&quot;, 
						&quot;Officer/Executive-Middle/Senior&quot;, &quot;13&quot;, 
						&quot;Farmer and landowner of the same farming land&quot;, &quot;14&quot;, 
						&quot;Farmer- on contract basis/ working on someone else&quot;, &quot;15&quot;, 
						&quot;Agricultural worker&quot;, &quot;16&quot;, 
						&quot;Owner of livestock&quot;, &quot;17&quot;, 
						&quot;Owner of fisheries&quot;, &quot;18&quot;, 
						&quot;Owner of poultry&quot;, &quot;19&quot;,
						&quot;Artisan / Skilled/ trained labor&quot;, &quot;20&quot;,
						&quot;Postman&quot;, &quot;21&quot;,
						&quot;Teacher&quot;, &quot;22&quot;,
						&quot;Doctor&quot;, &quot;23&quot;,
						&quot;Service (Staying in one village and working in another village)&quot;, &quot;24&quot;,
						&quot;Service (Staying in one village and working in City/town)&quot;, &quot;25&quot;,
						&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T4M_10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4M_3__c</fullName>
        <formula>CASE(Gender__c, 
						&quot;Male&quot;, &quot;1&quot;, 
						&quot;Female&quot;, &quot;2&quot;,
					&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T4M_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4M_8__c</fullName>
        <formula>CASE(Education__c, 
						&quot;Illiterate&quot;, &quot;1&quot;, 
						&quot;Literate but no formal schooling&quot;, &quot;2&quot;,
						&quot;School – Up to 4th standard&quot;, &quot;3&quot;,
						&quot;5th – 9th standard&quot;, &quot;4&quot;,
						&quot;SSC/HSC(10th – 12th)&quot;, &quot;5&quot;,
						&quot;Some College(incl.dip) but not Graduate&quot;, &quot;6&quot;, 
						&quot;Graduate–General (B.A.,B.Sc.B.Com.)&quot;, &quot;7&quot;, 
						&quot;Graduate–Professional (B.E., M.B.B.S., B.Tech)&quot;, &quot;8&quot;, 
						&quot;Post-Graduate-General (M.A., M.Sc., M.Com, M.Phil, PhD)&quot;, &quot;9&quot;, 
						&quot;Post-Graduate-Professional (M.E., M.Tech., MBA etc.)&quot;, &quot;10&quot;, 
					&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T4M_8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS__c</fullName>
        <label>WS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not working</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Working part-time (&lt;20 hrs / week)</fullName>
                </value>
                <value>
                    <fullName>Working full time (&gt;20 hrs / week)</fullName>
                </value>
                <value>
                    <fullName>Student Working part-time (&lt;20 hrs / week)</fullName>
                </value>
                <value>
                    <fullName>Student Working full time (&gt;20 hrs / week)</fullName>
                </value>
                <value>
                    <fullName>Seasonal part-time worker (&lt;20 hrs / week)</fullName>
                </value>
                <value>
                    <fullName>Seasonal full time worker (&gt;20 hrs / week)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HouseHold Member</label>
    <nameField>
        <displayFormat>HHM-{0}</displayFormat>
        <label>HouseHold Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HouseHold Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>